Criei uma task para criar admins fake e um controller e uma views

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/erikosampaio/time_to_answer.git",
-  "author": "erikosampaio <erikoa.93@gmail.com>",
+  "repository": "https://github.com/BrunoLima-dev/time_to_answer_new.git",
+  "author": "Brunolima-dev <brunoprograme04@gmail.com>",
   "license": "MIT"
 }
